# auto-video

./: .gitignore  docker-compose.yml  package-lock.json  readme.md
agent/: package-lock.json  package.json  tsconfig.json
agent/api/: server.ts
agent/editor/: agent.ts  broadcast.ts  converters.ts  projectSync.ts  types.d.ts  utils.ts
api/: pyproject.toml
api/src/api/: main.py
docs/: _config.yml  documentation.md  index.md
docs/fe/: index.md  test.md
docs/infra/: index.md
docs/server/: index.md
docs/workers/: index.md
infra/: redis.conf
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0fddbbc00627_.py  115690a10355_init.py  239dd921e801_.py  67c706e35d46_.py  9f407d7c3800_.py  ca5cb5202f8a_init.py  d003aaba5033_.py
server/src/server/: config.py
server/src/server/api/: command.py  main.py  media_api.py  project_api.py  scene_api.py  schemas.py  section_api.py  settings.py  tts_api.py
server/src/server/common/: exception.py
server/src/server/database/: alembic_settings.py  session.py  settings.py
server/src/server/database/models/: __init__.py  models.py
server/src/server/database/repositories/: media.py
server/src/server/redis/: __init__.py  redis_client.py  redis_settings.py
server/src/server/repositories/: repository.py
server/src/server/service/: file.py  project.py  project_media.py  project_scene.py  project_section.py  project_types.py
server/src/server/storage/: __init__.py  minio_client.py  settings.py  storage_client.py
server/src/server/tts/: __init__.py  settings.py  tts.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/crdt-test/: CrdtTestExample.tsx  SharedText.tsx  YjsContext.tsx  YjsContextInstance.ts  useYjs.ts  yjsActions.ts  yjsTypes.ts
web/src/editor/: EditingIntervalList.tsx  IntervalEditor.tsx  MediaSegmentItem.tsx  MediaSegmentList.tsx  ProjectEditor.tsx  SceneComponent.tsx  Section.tsx  SectionComponent.tsx  (+3 more)
web/src/editor-old/: SectionEditor.tsx  ssml.ts
workers/tts/: worker.py
(+21 files in other folders)
